[tool.poetry]
name = "bootcamp-aula-8"
version = "0.1.0"
description = ""
authors = ["Alexandre Lima <alexandrepompeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.18.0"
pandas = "^2.2.1"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
